# django-template

./: .gitignore  README.md  pyproject.toml
config/: .env.template
docker/: docker-compose.dev.yml
docker/celery/: start-beat.sh  start-flower.sh  start-worker.sh
docker/django/: Dockerfile
scripts/: clean.sh  format.sh
server/: asgi.py  urls.py
server/apps/core/: views.py
server/apps/core/logic/mixins/: models.py
server/settings/: __init__.py
server/settings/components/: common.py
