[tool.poetry]
name = "django-project"
version = "1.0.0"
description = ""
authors = ["Isaak Uchakaev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

django = "^4.1.6"
django-filter = "^22.1"
djangorestframework = "^3.14.0"
django-split-settings = "^1.2.0"

python-decouple = "^3.6"
psycopg2-binary = "^2.9.5"
bcrypt = "^4.0.1"
ipython = "^8.6.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
django-debug-toolbar = "^3.7.0"
mimesis = "^6.1.1"
ipython = "^8.6.0"
hypothesis = "^6.56.4"
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true